opam-version: "2.0"
version: "0.9"
maintainer: "filliatr@lri.fr"
authors: [
  "Romain Bardou"
  "Francois Bobot"
  "Jean-Christophe Filliâtre"
  "Johannes Kanig"
  "Stephane Lescuyer"
]
homepage: "http://mlpost.lri.fr/index.fr.html"
dev-repo: "git://github.com/backtracking/mlpost"
bug-reports: "https://github.com/backtracking/mlpost/issues"
synopsis: "Library for adding mlpost graphics in lablgtk"
license: "LGPL-2.1"
build: [
  [ "dune" "build" "--for-release-of-packages" "mlpost-lablgtk" ]
]

depends: [
  "ocaml" { >= "4.07.0" }
  "bitstring" { >= "3.0.0" }
  "dune"
  "mlpost"
  "cairo2-gtk"
  "lablgtk"
  "conf-gnomecanvas"
]
