opam-version: "1.2"
version: "0.9"
maintainer: "filliatr@lri.fr"
authors: [
  "Romain Bardou"
  "Francois Bobot"
  "Jean-Christophe Filliâtre"
  "Johannes Kanig"
  "Stephane Lescuyer"
]
homepage: "http://mlpost.lri.fr/index.fr.html"
dev-repo: "git://github.com/backtracking/mlpost"
bug-reports: "https://github.com/backtracking/mlpost/issues"
license: "LGPL-2.1"
build: [
  [ "dune" "build" "--for-release-of-packages" "mlpost" "-j" jobs ]
]

build-test: [
  [ "dune" "runtest" "--for-release-of-packages" "mlpost" "-j" jobs]
]

depends: [
  "ocamlfind" #during execution also
  "bitstring" { >= "3.0.0" }
  "cairo2"
  "dune" {build}
]
available: [ ocaml-version >= "4.04.0" ]
