(library
  (name mlpost)
  (public_name mlpost)
  (synopsis "OCaml interface to Mlpost, Cairo, Pgf")
  (libraries unix bitstring cairo2 mlpost_version)
  (preprocess (pps ppx_bitstring img))
  (c_names ml_mlpost_ft)
  (c_library_flags -lfreetype -lz)
  (c_flags -I/usr/include/freetype2 -I/usr/include/cairo)
)

(ocamllex scan_prelude pfb_lexer map_lexer)
(ocamlyacc pfb_parser map_parser)
