(library
 (name mlpost_desc_options)
 (public_name mlpost.desc_options)
 (modules mlpost_desc_options))

(library
 (name mlpost_options)
 (public_name mlpost.options)
 (modules mlpost_options)
 (libraries mlpost mlpost_desc_options)
 (flags -linkall :standard))

(executable
 (name tool)
 (modules tool)
 (public_name mlpost)
 (package mlpost)
 (libraries mlpost mlpost_desc_options mlpost_version unix))

; (executable
;   (name gmlpost)
;   (public_name gmlpost)
;   (package mlpost-lablgtk)
;   (modules Gmlpost Glexer)
;   (libraries threads lablgtk2 lablgtk2.gnomecanvas)
; )

; (ocamllex glexer)
